--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -350,7 +350,7 @@ body {
             flex: 1;
             p {
               font-size: 16px;
-              font-family: "Gotham Book";
+              font-family: "Gotham Bold";
               white-space: pre-wrap;
               color: #fff;
             }
@@ -1236,6 +1236,9 @@ body {
                   width: 50px;
                   height: 50px;
                 }
+                p {
+                  font-family: "Gotham Bold";
+                }
               }
             }
           }
@@ -1424,6 +1427,9 @@ body {
         padding-top: 200px;
         text-align: center;
         &.headquarter {
+          p {
+            color: #9da6c7;
+          }
           .headquater-item {
             padding-top: 200px;
             h3 {
@@ -2677,7 +2683,7 @@ body {
             }
           }
           &.mobile {
-            margin-top: 900px;
+            margin-top: 1300px;
           }
           &.branding {
             margin-top: 1460px;
@@ -2867,7 +2873,7 @@ body {
       }
       .about-page {
         .about-section:nth-of-type(2) {
-          margin-top: 1140px;
+          margin-top: 1360px;
         }
       }
       .singlePortfolio-page {
@@ -3119,9 +3125,19 @@ body {
             height: 550px;
             .portfolio-header-description {
               padding: 100px 150px 100px 150px;
+              .portfolio-header-text {
+                p {
+                  font-size: 18px;
+                }
+              }
               .portfolio-header-figure {
                 margin-left: 50px;
                 margin-right: 50px;
+                .figure {
+                  p {
+                    font-size: 16px;
+                  }
+                }
               }
             }
           }
@@ -3218,9 +3234,6 @@ body {
           }
         }
         .about-section {
-          h2 {
-            font-size: 24px;
-          }
           .sub_title{
             font-size: 16px;
             color: #9da6c7;
@@ -3819,7 +3832,7 @@ body {
 @media (min-width: 1920px) {
   .segment.navbar {
     .nav-color {
-      padding: 22px 8px 22px 8px !important;
+      font-size: 14px;
       .text {
         padding-top: 2px;
       }
@@ -3837,7 +3850,6 @@ body {
             .text-item {
               p {
                 font-size: 14px;
-                font-family: "Gotham Bold";
               }
             }
             .description {
@@ -3848,9 +3860,17 @@ body {
           }
         }
       }
+      .ui.buttons {
+        a {
+          font-size: 14px !important;
+        }
+      }
     }
   }
   .page {
+    p {
+      font-size: 18px;
+    }
     main {
       .divide {
         height: 200px;
@@ -3935,6 +3955,11 @@ body {
               .portfolio-header-figure {
                 margin-left: 50px;
                 margin-right: 50px;
+                .figure {
+                  p {
+                    font-size: 16px;
+                  }
+                }
               }
             }
           }
@@ -4014,9 +4039,9 @@ body {
       }
       .about-page {
         .about-header {
-          height: 530px;
+          height: 835px;
           .header-gradient {
-            height: 580px;
+            height: 885px;
             .header-description {
               .header-text {
                 h1 {
@@ -4060,7 +4085,7 @@ body {
           }
         }
         .about-section:nth-of-type(2) {
-          margin-top: 100px;
+          margin-top: -100px;
         }
         .about-section:nth-of-type(5) {
           margin-top: 0px;
@@ -4121,6 +4146,7 @@ body {
                 a {
                   font-size: 16px;
                   padding-top: 3px;
+                  padding-left: 0;
                 }
               }
             }
@@ -4196,7 +4222,13 @@ body {
               margin: inherit !important;
             }
             .service-review {
-              padding-top: 350px;
+              padding-top: 300px;
+              p {
+                font-size: 16px;
+                &.case_text {
+                  font-size: 16px;
+                }                
+              }
               .third-button {
                 font-size: 18px !important;
                 padding: 15px 50px 5px 50px;
