--- a/public/css/app.css
+++ b/public/css/app.css
@@ -531,10 +531,6 @@ body {
   text-decoration: none;
 }
 
-.page main .main-footer .main-footer-description p {
-  font-size: 13px;
-}
-
 .page main .service-item {
   padding: 20px 20px 30px 20px;
   background: -webkit-gradient(linear, left top, left bottom, from(#09133a), to(#070e28));
@@ -1302,7 +1298,6 @@ body {
 }
 
 .page main .text-card .title h3 {
-  font-size: 16px;
   font-family: "Gotham Bold";
   white-space: pre-wrap;
   color: #fff;
@@ -1326,17 +1321,10 @@ body {
 }
 
 .page main .text-card .description p {
-  font-size: 13px;
   font-family: "Gotham Book";
   white-space: pre-wrap;
   color: #9da6c7;
   font-weight: 100;
-}
-
-@media (min-width: 1280px) {
-  .page main .text-card .description p {
-    font-size: 12px;
-  }
 }
 
 @media (min-width: 320px) {
@@ -1354,12 +1342,6 @@ body {
 @media (min-width: 414px) {
   .page main .text-card {
     padding: 60px;
-  }
-}
-
-@media (min-width: 1920px) {
-  .page main .text-card .description p {
-    font-size: 16px;
   }
 }
 
@@ -1751,7 +1733,7 @@ body {
 }
 
 .page main .singlePortfolio-page .portfolio-section.review .review-item .review-text-section .description {
-  font-size: 12px;
+  font-family: "Gotham Bold";
 }
 
 .page main .singlePortfolio-page .portfolio-section.review .review-item .review-personal p {
@@ -1773,7 +1755,6 @@ body {
 
 .page main .singlePortfolio-page .portfolio-section .main_description p {
   color: #9da6c7;
-  font-size: 12px;
 }
 
 .page main .singlePortfolio-page .portfolio-section .main_description p.sub_title {
@@ -2304,8 +2285,8 @@ body {
 .page main .service-page .service-section {
   color: #fff;
   text-align: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .page main .service-page .service-section.review {
@@ -2591,7 +2572,7 @@ body {
 }
 
 .page main .login-page .login-responsive .login-form .segment .privacy-section .terms-section span {
-  color: #9aa2bf !important;
+  color: #656c8b !important;
 }
 
 .page main .login-page .login-responsive .login-form .segment .privacy-section .terms-section a {
@@ -2612,6 +2593,7 @@ body {
   font-weight: bold;
   font-family: "Gotham Bold";
   font-size: 16px;
+  padding-left: 32px;
 }
 
 .page main .login-page .login-responsive .login-form .segment .google-button img {
@@ -3123,14 +3105,6 @@ body {
     padding-right: 0px;
   }
 
-  .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .header-description .header-text h2 {
-    font-size: 30px;
-  }
-
-  .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .header-description .header-text p {
-    font-size: 15px;
-  }
-
   .page main .singlePortfolio-page .singlePortfolio-header .header-gradient .image-group {
     padding-left: 0px;
     padding-right: 0px;
@@ -3147,6 +3121,10 @@ body {
   .page main .singlePortfolio-page .portfolio-section.review .review-item {
     width: 260px;
     left: 30px;
+  }
+
+  .page main .singlePortfolio-page .portfolio-section .main_description:nth-of-type(1) {
+    margin-top: 100px;
   }
 
   .page main .singlePortfolio-page .portfolio-section .service {
@@ -3202,7 +3180,8 @@ body {
   }
 
   .page main .about-page .about-section:nth-of-type(5) {
-    margin-top: 1000px;
+    margin-top: 1250px;
+    margin-bottom: 100px;
   }
 
   .page main .about-page .about-section:nth-of-type(5) .alice-carousel {
@@ -3223,13 +3202,16 @@ body {
   }
 
   .page main .about-page .about-section .headquarters {
-    min-height: 445px;
-    height: 445px;
+    min-height: 150px;
+    height: 150px;
     width: 100%;
-    background-size: cover;
     max-width: 100%;
     background-position: center center;
     background-repeat: no-repeat;
+  }
+
+  .page main .about-page .about-section .headquarters .headquater-item {
+    padding-top: 60px;
   }
 
   .page main .contact-page .contact-header {
@@ -3251,15 +3233,12 @@ body {
   }
 
   .page main .contact-page .contact-header .header-gradient .header-description .header-text h2 {
-    font-size: 30px;
-  }
-
-  .page main .contact-page .contact-header .header-gradient .header-description .header-text p {
-    font-size: 14px;
+    line-height: 1.4285em;
   }
 
   .page main .contact-page .contact-section {
-    margin-top: 1300px;
+    margin-top: 1505px;
+    margin-bottom: 100px;
   }
 
   .page main .contact-page .contact-section .message-form label {
@@ -3370,7 +3349,7 @@ body {
     background-size: cover;
     background-position: unset;
     background-repeat: no-repeat;
-    margin-top: 1360px;
+    margin-top: 1330px;
   }
 
   .page main .service-page .service-section.review .custom-col-4 {
@@ -3380,7 +3359,7 @@ body {
   }
 
   .page main .service-page .service-section.review .service-review {
-    padding-top: 0px;
+    padding-top: 20px;
   }
 
   .page main .service-page .service-section.review .service-review h3 {
@@ -3392,11 +3371,15 @@ body {
   }
 
   .page main .service-page .service-section.mobile {
-    margin-top: 1300px;
+    margin-top: 1370px;
   }
 
   .page main .service-page .service-section.branding {
-    margin-top: 1460px;
+    margin-top: 2100px;
+  }
+
+  .page main .service-page .service-section.illustration {
+    margin-top: 1350px;
   }
 
   .page main .service-page .service-section.tech {
@@ -3458,12 +3441,15 @@ body {
         -ms-flex-direction: column;
             flex-direction: column;
     font-size: 14px;
+    text-align: left;
   }
 
-  .page main .login-page .login-responsive .login-form .segment .remember-section .checkbox label,
+  .page main .login-page .login-responsive .login-form .segment .remember-section .checkbox label {
+    padding-top: 3px;
+    padding-left: 40px;
+  }
+
   .page main .login-page .login-responsive .login-form .segment .remember-section a {
-    text-align: left;
-    font-size: 14px;
     padding-top: 15px;
   }
 
@@ -3475,12 +3461,18 @@ body {
     font-size: 14px;
     text-align: left;
     padding-left: 40px;
+    padding-top: 3px;
   }
 
   .page main .login-page .login-responsive .login-form .segment .privacy-section .terms-section {
     margin-left: 40px;
     line-height: 0;
     text-align: left;
+    font-size: 14px;
+    position: relative;
+    top: -19px;
+    right: -92px;
+    font-family: "Gotham Bold";
   }
 
   .page main .login-page .login-responsive .login-form .segment .privacy-section .terms-section a {
@@ -3533,6 +3525,10 @@ body {
     width: 300px;
     left: 30px;
   }
+
+  .page main .contact-page .contact-section {
+    margin-top: 1480px;
+  }
 }
 
 @media (min-width: 375px) {
@@ -3553,8 +3549,16 @@ body {
     margin-top: 1360px;
   }
 
+  .page main .contact-page .contact-section {
+    margin-top: 1455px;
+  }
+
   .page main .singlePortfolio-page .portfolio-section .sub_title {
     padding-top: 50px;
+  }
+
+  .page main .singlePortfolio-page .portfolio-section .main_description:nth-of-type(1) {
+    margin-top: 0;
   }
 
   .page main .singlePortfolio-page .portfolio-section .sub_descriptions .round_number {
@@ -3594,6 +3598,14 @@ body {
     height: 46px;
   }
 
+  .page main .home-page .homepage-header {
+    height: 300px;
+  }
+
+  .page main .home-page .homepage-header .homepage-header-description {
+    margin-top: 280px;
+  }
+
   .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure {
     margin: 0px 35px 0px 35px;
   }
@@ -3610,6 +3622,10 @@ body {
     width: 355px;
     left: 30px;
     padding: 50px 40px 50px 40px;
+  }
+
+  .page main .service-page .service-section.illustration {
+    margin-top: 1350px;
   }
 
   .page main .login-page.register {
@@ -4108,6 +4124,10 @@ body {
 
   .page main .login-page .login-responsive .login-form .segment .privacy-section .checkbox label {
     padding-top: 0px;
+  }
+
+  .page main .login-page .login-responsive .login-form .segment .privacy-section .terms-section a:nth-of-type(2) {
+    padding-top: 0;
   }
 
   .footer {
@@ -4677,7 +4697,7 @@ body {
 
   .page main .singlePortfolio-page .portfolio-section.review .review-item .review-text-section .description {
     height: 100%;
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .page main .singlePortfolio-page .portfolio-section.scope {
